# Darwin

./: .dockerignore  .env.example  .gitignore  Arxiv_MCP.md  Dockerfile  GUI_README.md  INTEGRATION_GUIDE.md  Makefile  Project.md  Project_Progress_Report.md  README.md  agent_wrapper.py  check_arxiv.py  check_arxiv_type.py  docker-compose.gpu.yml  docker-compose.yml  evaluate_search.py  evaluate_system.py  pyproject.toml  report.aux  report.out  report.tex  report.toc  requirements.txt  start_ollama.ps1  test_full_pipeline.py  ui_app.py  ui_app_fast.py  ui_app_integrated.py  ui_app_realtime.py  ui_app_simple.py
Darwin Research/.obsidian/: workspace.json
Darwin Research/.obsidian/plugins/obsidian-local-rest-api/: data.json
Darwin Research/Research/Incoming/: 2202.07125v5.md  2306.04338v1.md  2310.08337v3.md  2409.14413v1.md  2602.12375v1.md  Artificial Intelligence Trends.md  Data Quality Challenges in Machine Learning.md  Federated Learning.md  Machine Learning Trends.md  Research Note - Test.md
config/: agent_config.json  claude_desktop_config.json  obsidian_config.json
docker/: entrypoint.sh
legacy/arxiv_server/: server.py
scripts/: docker-run.sh  doctor.sh  install.sh  run.sh  stop.sh
src/agent/: main.py  mcp_client.py  ollama_client.py  openai_client.py  prompt_templates.py  workflow.py
src/arxiv_server/: server.py
src/common/: __init__.py  exceptions.py  logging_config.py  pdf_sections.py  rate_limit.py  settings.py  vault.py
src/obsidian_server/: server.py
src/pdf_parser/: server.py
tests/: conftest.py  test_exceptions.py  test_pdf_sections.py  test_query_builder.py  test_rate_limit.py  test_settings.py  test_vault.py
