[tool.poetry]
name = "research-agent"
version = "0.1.0"
description = "A privacy-focused research agent using MCP."
authors = ["Ammar <ammar@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
fastmcp = "^0.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
# arxiv = "^2.1.0" # Assuming there's a python wrapper, or we use direct API
pymupdf = "^1.23.0" # fitz
pypdf2 = "^3.0.0"
ollama = "^0.1.0"
uv = "^0.1.0" # For fast package management if needed by sub-tools
arxiv = "^2.4.0"
httpx = ">=0.27.0,<0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
